MC1060-Fix collapsed state of primary actions

--- a/ui/reuse/client/src/assets/css/_qbColorVariables.scss
+++ b/ui/reuse/client/src/assets/css/_qbColorVariables.scss
@@ -238,7 +238,7 @@ $topnav-title-icon-color:               $badcolor14-top-nav-title-icon-color;   
 $topnav-icon-color:                     $iconfont-on-light-normal-color;        // not in XD spreadsheet
 $topnav-hover-color:                    $color-black-100;                       // not in XD spreadsheet
 $topnav-hover-background-color:         $badcolor10-nav-hover-bg;               // not in XD spreadsheet
-$topnav-header-background-color:        $color-blue-300;                        // not in XD spreadsheet
+$topnav-header-background-color:        $color-black-250;                        // not in XD spreadsheet
 
 // left navigation
 $leftnav-background-color:              $color-black-250;
